WIP таблица паролей

--- a/PasswordStore.UI/App.axaml
+++ b/PasswordStore.UI/App.axaml
@@ -8,6 +8,9 @@
 
     <Application.Styles>
         <FluentTheme Mode="Dark"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
         
         <Style Selector="TextBlock.headerText">
             <Setter Property="FontFamily" Value="Calibri"/>
