WIP таблица паролей: просмотр и копирование паролей

--- a/PasswordStore.UI/Views/MainWindow.axaml
+++ b/PasswordStore.UI/Views/MainWindow.axaml
@@ -3,11 +3,10 @@
         xmlns:vm="using:PasswordStore.UI.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:PasswordStore.UI.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PasswordStore.UI.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Your password storage"
+        Title="Ваше хранилище паролей"
         TransparencyLevelHint="Blur"
         Background="Transparent"
         ExtendClientAreaToDecorationsHint="True"
