--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -27,6 +27,11 @@
                         <Image Source="/Assets/add.png"/>
                     </MenuItem.Header>
                 </MenuItem>
+                <MenuItem Command="{Binding LoadData}">
+                    <MenuItem.Header>
+                        <Image Source="/Assets/refresh.png"/>
+                    </MenuItem.Header>
+                </MenuItem>
                 <MenuItem HorizontalAlignment="Right">
                     <MenuItem.Header>
                         <Image Source="/Assets/settings.png"/>
@@ -46,6 +51,7 @@
                 HorizontalAlignment="Stretch"
                 HorizontalScrollBarVisibility="Hidden"
                 IsReadOnly="True"
+                SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                 Items="{Binding Credentials}">
                 <DataGrid.Columns>
                     <DataGridTextColumn
@@ -58,15 +64,20 @@
                         Width="*"
                         Binding="{Binding Login}"
                         FontSize="14"/>
-                    <DataGridTextColumn
+                    <!--<DataGridTextColumn
                         Header="Пароль"
                         Width="*"
                         Binding="{Binding Password}"
-                        FontSize="14"/>
+                        FontSize="14"/>-->
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="20" Height="20">
+                                <Button
+                                    ToolTip.Tip="Показать пароль"
+                                    Width="20"
+                                    Height="20"
+                                    Command="{Binding $parent[UserControl].DataContext.ShowPassword}"
+                                    CommandParameter="{Binding}">
                                     <Image Source="/Assets/show.png"/>
                                 </Button>
                             </DataTemplate>
@@ -75,7 +86,12 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="20" Height="20">
+                                <Button
+                                    ToolTip.Tip="Скопировать пароль"
+                                    Width="20"
+                                    Height="20"
+                                    Command="{Binding $parent[UserControl].DataContext.CopyToClipboard}"
+                                    CommandParameter="{Binding}">
                                     <Image Source="/Assets/copy.png"/>
                                 </Button>
                             </DataTemplate>
@@ -84,7 +100,12 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="20" Height="20">
+                                <Button
+                                    ToolTip.Tip="Редактировать"
+                                    Width="20"
+                                    Height="20"
+                                    Command="{Binding $parent[UserControl].DataContext.Edit}"
+                                    CommandParameter="{Binding}">
                                     <Image Source="/Assets/edit.png"/>
                                 </Button>
                             </DataTemplate>
@@ -93,7 +114,12 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="20" Height="20">
+                                <Button
+                                    ToolTip.Tip="Удалить"
+                                    Width="20"
+                                    Height="20"
+                                    Command="{Binding $parent[UserControl].DataContext.Remove}"
+                                    CommandParameter="{Binding}">
                                     <Image Source="/Assets/delete.png"/>
                                 </Button>
                             </DataTemplate>
