--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -22,7 +22,7 @@
                         <DockPanel HorizontalAlignment="Stretch"/>
                     </ItemsPanelTemplate>
                 </Menu.ItemsPanel>
-                <MenuItem>
+                <MenuItem Command="{Binding Add}">
                     <MenuItem.Header>
                         <Image Source="/Assets/add.png"/>
                     </MenuItem.Header>
