--- a/PasswordStore.UI/Views/ShowMessageWindow.axaml
+++ b/PasswordStore.UI/Views/ShowMessageWindow.axaml
@@ -11,7 +11,7 @@
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaTitleBarHeightHint="30"
         Width="400"
-        Height="150"
+        Height="250"
         CanResize="False"
         WindowStartupLocation="CenterOwner">
     
@@ -29,6 +29,7 @@
             <TextBlock
                 FontFamily="Calibri"
                 FontSize="20"
+                Margin="5 20 5 5"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 TextAlignment="Center"
