--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -50,6 +50,7 @@
                 RowBackground="Transparent"
                 HorizontalAlignment="Stretch"
                 HorizontalScrollBarVisibility="Hidden"
+                VerticalScrollBarVisibility="Auto"
                 IsReadOnly="True"
                 SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                 Items="{Binding Credentials}">
@@ -64,11 +65,6 @@
                         Width="*"
                         Binding="{Binding Login}"
                         FontSize="14"/>
-                    <!--<DataGridTextColumn
-                        Header="Пароль"
-                        Width="*"
-                        Binding="{Binding Password}"
-                        FontSize="14"/>-->
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
