--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -14,8 +14,10 @@
                 <ExperimentalAcrylicMaterial BackgroundSource="Digger" TintColor="Black" TintOpacity="1" MaterialOpacity="0.65"/>
             </ExperimentalAcrylicBorder.Material>
         </ExperimentalAcrylicBorder>
-        
-        <DockPanel VerticalAlignment="Stretch" Margin="0 40 0 0">
+        <Panel x:Name="LoadMaskPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsVisible="{Binding MaskVisible}" Background="#77777777">
+            <TextBlock Text="Загрузка..." FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Panel>
+        <DockPanel x:Name="MainPanel" VerticalAlignment="Stretch" Margin="0 40 0 0" IsEnabled="{Binding MainViewEnabled}">
             <Menu DockPanel.Dock="Top">
                 <Menu.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -88,7 +90,7 @@
                                     Height="20"
                                     Command="{Binding $parent[UserControl].DataContext.CopyToClipboard}"
                                     CommandParameter="{Binding}">
-                                    <Image Source="/Assets/copy.png"/>
+                                    <Image Source="/Assets/copy.ico"/>
                                 </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -102,7 +104,7 @@
                                     Height="20"
                                     Command="{Binding $parent[UserControl].DataContext.Edit}"
                                     CommandParameter="{Binding}">
-                                    <Image Source="/Assets/edit.png"/>
+                                    <Image Source="/Assets/edit.ico"/>
                                 </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -116,7 +118,7 @@
                                     Height="20"
                                     Command="{Binding $parent[UserControl].DataContext.Remove}"
                                     CommandParameter="{Binding}">
-                                    <Image Source="/Assets/delete.png"/>
+                                    <Image Source="/Assets/delete.ico"/>
                                 </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
