Добавлена колонка с порядковым номером записи

--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -55,8 +55,15 @@
                 VerticalScrollBarVisibility="Auto"
                 IsReadOnly="True"
                 SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                Sorting="PasswordsGrid_OnSorting"
                 Items="{Binding Credentials}">
                 <DataGrid.Columns>
+                    <DataGridTextColumn
+                        Header="№"
+                        Width="30"
+                        CanUserSort="True"
+                        Binding="{Binding OrderNumber}"
+                        FontSize="14"/>
                     <DataGridTextColumn
                         Header="Сервис"
                         Width="*"
