--- a/PasswordStore.UI/Views/ShowMessageWindow.axaml
+++ b/PasswordStore.UI/Views/ShowMessageWindow.axaml
@@ -13,7 +13,8 @@
         Width="400"
         Height="250"
         CanResize="False"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        KeyUp="MessageWindow_OnKeyUp">
     
     <Design.DataContext>
         <viewModels:ShowMessageViewModel/>
