Добавлен поиск по сервису и логину в таблице

--- a/PasswordStore.UI/Views/PasswordGridView.axaml
+++ b/PasswordStore.UI/Views/PasswordGridView.axaml
@@ -17,8 +17,13 @@
         <Panel x:Name="LoadMaskPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsVisible="{Binding MaskVisible}" Background="#77777777">
             <TextBlock Text="Загрузка..." FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Panel>
-        <DockPanel x:Name="MainPanel" VerticalAlignment="Stretch" Margin="0 40 0 0" IsEnabled="{Binding MainViewEnabled}">
-            <Menu DockPanel.Dock="Top">
+        <Grid x:Name="MainPanel" VerticalAlignment="Stretch" Margin="0 40 0 0" IsEnabled="{Binding MainViewEnabled}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Menu Grid.Row="0">
                 <Menu.ItemsPanel>
                     <ItemsPanelTemplate>
                         <DockPanel HorizontalAlignment="Stretch"/>
@@ -40,7 +45,33 @@
                     </MenuItem.Header>
                 </MenuItem>
             </Menu>
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch" Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="40"/>
+                </Grid.ColumnDefinitions>
+                <TextBox
+                    Grid.Column="0"
+                    Name="FilterBox"
+                    Watermark="Поиск"
+                    Height="40"
+                    FontSize="18"
+                    FontFamily="Calibri"
+                    HorizontalAlignment="Stretch"
+                    Text="{Binding FilterValue}"/>
+                <Button
+                    Grid.Column="1"
+                    Name="ClearFilter"
+                    IsEnabled="{Binding ClearFilterEnabled}"
+                    Height="40"
+                    Width="40"
+                    Background="Transparent"
+                    Command="{Binding ClearFilter}">
+                    <Image Source="/Assets/clear.png"/>
+                </Button>
+            </Grid>
             <DataGrid
+                Grid.Row="2"
                 Margin="4"
                 Name="PasswordsGrid"
                 AutoGenerateColumns="False"
@@ -132,6 +163,6 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-        </DockPanel>
+        </Grid>
     </Panel>
 </UserControl>
