Реализовано редактирование новых полей модели (кроме секретных вопросов: TODO)

--- a/PasswordStore.UI/Views/CredentialFormWindow.axaml
+++ b/PasswordStore.UI/Views/CredentialFormWindow.axaml
@@ -11,7 +11,7 @@
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaTitleBarHeightHint="30"
         Width="400"
-        Height="400"
+        Height="700"
         WindowStartupLocation="CenterOwner">
         <Design.DataContext>
                 <viewModels:CredentialFormViewModel/>
@@ -39,6 +39,26 @@
                                 <TextBox Classes="dataBox" Name="LoginBox" Text="{Binding Data.Login}"/>
                                 <Label Classes="dataLabel" Content="Пароль:" Target="PasswordBox"/>
                                 <TextBox Classes="dataBox" Name="PasswordBox" Text="{Binding Data.OpenPassword}"/>
+                                <Label Classes="dataLabel" Name="CreateDateLabel" Content="{Binding CreateDateText}"/>
+                                <CheckBox Content="Вход по номеру телефона"
+                                          Name="IsPhoneNumberBox"
+                                          IsChecked="{Binding Data.IsPhoneNumberAuth}"
+                                          Checked="IsPhoneNumberBoxOnChecked"
+                                          Unchecked="IsPhoneNumberBoxOnUnchecked"/>
+                                <Label Classes="dataLabel" Content="Номер телефона:" Target="PhoneNumberBox"/>
+                                <TextBox Classes="dataBox"
+                                         Name="PhoneNumberBox"
+                                         Text="{Binding PhoneNumber, Mode=TwoWay}"
+                                         IsEnabled="{Binding IsPhoneNumber}"/>
+                                <Label Classes="dataLabel" Content="Примечание:" Target="NoteBox"/>
+                                <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="120">
+                                        <TextBox Classes="dataBox"
+                                                 Name="NoteBox"
+                                                 Text="{Binding Data.Note}"
+                                                 VerticalAlignment="Stretch"
+                                                 AcceptsReturn="True"
+                                                 TextWrapping="Wrap"/>
+                                </ScrollViewer>
                         </StackPanel>
                 </DockPanel>
         </Panel>
