Добавлено редактирование секретных вопросов

--- a/PasswordStore.UI/Views/CredentialFormWindow.axaml
+++ b/PasswordStore.UI/Views/CredentialFormWindow.axaml
@@ -40,25 +40,89 @@
                                 <Label Classes="dataLabel" Content="Пароль:" Target="PasswordBox"/>
                                 <TextBox Classes="dataBox" Name="PasswordBox" Text="{Binding Data.OpenPassword}"/>
                                 <Label Classes="dataLabel" Name="CreateDateLabel" Content="{Binding CreateDateText}"/>
-                                <CheckBox Content="Вход по номеру телефона"
-                                          Name="IsPhoneNumberBox"
-                                          IsChecked="{Binding Data.IsPhoneNumberAuth}"
-                                          Checked="IsPhoneNumberBoxOnChecked"
-                                          Unchecked="IsPhoneNumberBoxOnUnchecked"/>
-                                <Label Classes="dataLabel" Content="Номер телефона:" Target="PhoneNumberBox"/>
-                                <TextBox Classes="dataBox"
-                                         Name="PhoneNumberBox"
-                                         Text="{Binding PhoneNumber, Mode=TwoWay}"
-                                         IsEnabled="{Binding IsPhoneNumber}"/>
-                                <Label Classes="dataLabel" Content="Примечание:" Target="NoteBox"/>
-                                <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="120">
-                                        <TextBox Classes="dataBox"
-                                                 Name="NoteBox"
-                                                 Text="{Binding Data.Note}"
-                                                 VerticalAlignment="Stretch"
-                                                 AcceptsReturn="True"
-                                                 TextWrapping="Wrap"/>
-                                </ScrollViewer>
+                                <Expander Background="Transparent" BorderThickness="0" HorizontalAlignment="Stretch" Header="Дополнительные параметры">
+                                        <StackPanel  Orientation="Vertical" HorizontalAlignment="Stretch">
+                                                <CheckBox Content="Вход по номеру телефона"
+                                                          Name="IsPhoneNumberBox"
+                                                          IsChecked="{Binding Data.IsPhoneNumberAuth}"
+                                                          Checked="IsPhoneNumberBoxOnChecked"
+                                                          Unchecked="IsPhoneNumberBoxOnUnchecked"/>
+                                                <Label Classes="dataLabel" Content="Номер телефона:" Target="PhoneNumberBox"/>
+                                                <TextBox Classes="dataBox"
+                                                         Name="PhoneNumberBox"
+                                                         HorizontalAlignment="Stretch"
+                                                         Text="{Binding PhoneNumber, Mode=TwoWay}"
+                                                         IsEnabled="{Binding IsPhoneNumber}"/>
+                                                <Label Classes="dataLabel" Content="Примечание:" Target="NoteBox"/>
+                                                <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="120">
+                                                        <TextBox Classes="dataBox"
+                                                                 Name="NoteBox"
+                                                                 HorizontalAlignment="Stretch"
+                                                                 Text="{Binding Data.Note}"
+                                                                 VerticalAlignment="Stretch"
+                                                                 AcceptsReturn="True"
+                                                                 TextWrapping="Wrap"/>
+                                                </ScrollViewer>
+                                        </StackPanel>
+                                </Expander>
+                                <Expander Background="Transparent" BorderThickness="0" HorizontalAlignment="Stretch" Header="Секретные вопросы">
+                                        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+                                                <Menu>
+                                                        <Menu.ItemsPanel>
+                                                                <ItemsPanelTemplate>
+                                                                        <DockPanel HorizontalAlignment="Stretch"/>
+                                                                </ItemsPanelTemplate>
+                                                        </Menu.ItemsPanel>
+                                                        <MenuItem Command="{Binding Add}">
+                                                                <MenuItem.Header>
+                                                                        <Image Source="/Assets/add.png"/>
+                                                                </MenuItem.Header>
+                                                        </MenuItem>
+                                                </Menu>
+                                                <DataGrid
+                                                    Name="QuestionsGrid"
+                                                    AutoGenerateColumns="False"
+                                                    CanUserResizeColumns="True"
+                                                    Background="Transparent"
+                                                    BorderThickness="0"
+                                                    GridLinesVisibility="All"
+                                                    FontFamily="Calibri"
+                                                    FontSize="18"
+                                                    RowBackground="Transparent"
+                                                    HorizontalAlignment="Stretch"
+                                                    HorizontalScrollBarVisibility="Hidden"
+                                                    VerticalScrollBarVisibility="Auto"
+                                                    IsReadOnly="False"
+                                                    Items="{Binding SecretQuestions, Mode=TwoWay}">
+                                                    <DataGrid.Columns>
+                                                        <DataGridTextColumn
+                                                            Header="Вопрос"
+                                                            Width="*"
+                                                            Binding="{Binding Question}"
+                                                            FontSize="14"/>
+                                                        <DataGridTextColumn 
+                                                            Header="Ответ"
+                                                            Width="*"
+                                                            Binding="{Binding Answer}"
+                                                            FontSize="14"/>
+                                                        <DataGridTemplateColumn>
+                                                            <DataGridTemplateColumn.CellTemplate>
+                                                                <DataTemplate>
+                                                                    <Button
+                                                                        ToolTip.Tip="Удалить"
+                                                                        Width="20"
+                                                                        Height="20"
+                                                                        Command="{Binding $parent[Window].DataContext.Remove}"
+                                                                        CommandParameter="{Binding}">
+                                                                        <Image Source="/Assets/delete.ico"/>
+                                                                    </Button>
+                                                                </DataTemplate>
+                                                            </DataGridTemplateColumn.CellTemplate>
+                                                        </DataGridTemplateColumn>
+                                                    </DataGrid.Columns>
+                                                </DataGrid>
+                                        </StackPanel>
+                                </Expander>
                         </StackPanel>
                 </DockPanel>
         </Panel>
